Afinando detalles. Responsive y Albunes

--- a/albumaire.html
+++ b/albumaire.html
@@ -7,6 +7,7 @@
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div>
@@ -21,14 +22,20 @@
 		    </ul>
 		</nav>
 	</div>
+	<div>
+		<p class="albumPresentacion">La naturaleza, el aire fresco de la mañana pegándote en la cara, el fueguito por la noche..
+		Al Aire Libre es un álbum que surge  en un día de camping, que nos transporta desde el living de nuestra casa a aquellos lugares donde solemos desconectarnos de la rutina del día a día.
+		Pasen a disfrutar, y sientan el contacto con la naturaleza a través de cada foto…
+		</p>
+	</div>
 	<div class="album">
 		<div>
-			<img class="tamano--50" src="media/airelibre1.png" alt="airelibre1">
-			<img class="tamano--50" src="media/airelibre2.png" alt="airelibre2">
-			<img class="tamano--50" src="media/airelibre3.png" alt="airelibre3">
-			<img class="tamano--50" src="media/airelibre4.png" alt="airelibre4">
-			<img class="tamano--50" src="media/airelibre5.png" alt="airelibre5">
-			<img class="tamano--50" src="media/airelibre6.png" alt="airelibre6">
+			<img class="tamano--40" src="media/airelibre1.png" alt="airelibre1">
+			<img class="tamano--40" src="media/airelibre2.png" alt="airelibre2">
+			<img class="tamano--40" src="media/airelibre3.png" alt="airelibre3">
+			<img class="tamano--40" src="media/airelibre4.png" alt="airelibre4">
+			<img class="tamano--40" src="media/airelibre5.png" alt="airelibre5">
+			<img class="tamano--40" src="media/airelibre6.png" alt="airelibre6">
 		</div>
 	</div>
 </body>
