--- a/albumcoctel.html
+++ b/albumcoctel.html
@@ -7,6 +7,7 @@
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body id="bodyAlbum">
 	<div>
@@ -21,10 +22,16 @@
 		    </ul>
 		</nav>
 	</div>
+	<div>
+		<p class="albumPresentacion">La experiencia y el conocimiento de un buen Bartender, un sitio acogedor y la música que acompaña..Con todo esto, ya tenemos listo el ambiente perfecto para disfrutar de un rico Coctel.
+		Este álbum de “Cocteleria”, surge a partir de la campaña publicitaria del Bar Grune ubicado en Casilda, Santa Fe.
+		Pasen a disfrutar, con moderación.. 
+		</p>
+	</div>
 	<div class="album">
 		<div>
-			<img src="media/coctel1.png" alt="coctel1">
-			<img src="media/coctel2.png" alt="coctel2">
+			<img class="tamano--40" src="media/coctel1.png" alt="coctel1">
+			<img class="tamano--40" src="media/coctel2.png" alt="coctel2">
 		</div>
 	</div>
 </body>
