--- a/albumpeaky.html
+++ b/albumpeaky.html
@@ -7,6 +7,7 @@
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div>
@@ -21,17 +22,23 @@
 		    </ul>
 		</nav>
 	</div>
+	<div>
+		<p class="albumPresentacion">“By order of the peaky blinders..”
+		Gran Bretaña de posguerra, bandas criminales, gánster callejeros. Los Peaky Blinders fueron y son éxitos de taquilla, y aquí va su pequeño homenaje, con esta mini-producción.
+		Pasen a disfrutar, por orden de los Peaky Blinders…
+		</p>
+	</div>	
 	</div class="album">
 		<div>
-			<img src="media/peaky1.png" alt="peaky1">
-			<img src="media/peaky2.png" alt="peaky2">
-			<img src="media/peaky3.png" alt="peaky3">
-			<img src="media/peaky4.png" alt="peaky4">
-			<img src="media/peaky5.png" alt="peaky5">
-			<img src="media/peaky6.png" alt="peaky6">
-			<img src="media/peaky7.png" alt="peaky7">
-			<img src="media/peaky8.png" alt="peaky8">
-			<img src="media/peaky9.png" alt="peaky9">
+			<img class="tamano--40" src="media/peaky1.png" alt="peaky1">
+			<img class="tamano--40" src="media/peaky2.png" alt="peaky2">
+			<img class="tamano--40" src="media/peaky3.png" alt="peaky3">
+			<img class="tamano--40" src="media/peaky4.png" alt="peaky4">
+			<img class="tamano--40" src="media/peaky6.png" alt="peaky6">
+			<img class="tamano--40" src="media/peaky7.png" alt="peaky7">
+			<img class="tamano--40" src="media/peaky8.png" alt="peaky8">
+			<img class="tamano--40" src="media/peaky9.png" alt="peaky9">
+			<img class="tamano--40" src="media/peaky5.png" alt="peaky5">
 		</div>
 	</div>
 </body>
