--- a/albumvineria.html
+++ b/albumvineria.html
@@ -7,6 +7,7 @@
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div>
@@ -21,15 +22,19 @@
 		    </ul>
 		</nav>
 	</div>
+		<p class="albumPresentacion">“Vinos, espumantes, cervezas, quesos y fiambres”..
+		Parte de la campaña publicitaria que hicimos para “Vinos Langoscos”, otra Pyme que confió en nosotros para publicitar su producto.
+		Aquí, parte del trabajo…
+		</p>
 	<div class="albumv">
 		<div>
-			<img class="albumv__img--diferent" src="media/vineria1.png" alt="vineria1">
-			<img class="albumv__img" src="media/vineria2.png" alt="vineria2">
-			<img class="albumv__img" src="media/vineria3.png" alt="vineria3">
-			<img class="albumv__img" src="media/vineria4.png" alt="vineria4">
-			<img class="albumv__img" src="media/vineria5.png" alt="vineria5">
-			<img class="albumv__img" src="media/vineria6.png" alt="vineria6">
-			<img class="albumv__img" src="media/vineria7.png" alt="vineria7">
+			<img class="tamano--40" src="media/vineria6.png" alt="vineria6">
+			<img class="tamano--40" src="media/vineria7.png" alt="vineria7">
+			<img class="tamano--40" src="media/vineria2.png" alt="vineria2">
+			<img class="tamano--40" src="media/vineria3.png" alt="vineria3">
+			<img class="tamano--40" src="media/vineria4.png" alt="vineria4">
+			<img class="tamano--40" src="media/vineria5.png" alt="vineria5">
+			<img class="tamano--40" src="media/vineria1.png" alt="vineria1">
 		</div>
 	</div>
 </body>
