--- a/albumgastronomia.html
+++ b/albumgastronomia.html
@@ -7,6 +7,7 @@
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div>
@@ -21,15 +22,21 @@
 		    </ul>
 		</nav>
 	</div>
+	<div>
+		<p class="albumPresentacion">Entrada, plato principal, postre.. Tres palabras que a los Argentinos nos hacen felices.
+		El Álbum “Gastronomía” surge a partir de la campaña publicitaria que iniciamos con Babiera, para festejar un festival gastronómico al aire libre.
+		Estas son solo algunas de las fotos, como para ir abriendo el apetito.. 
+		</p>
+	</div>	
 	<div class="albumg">
 		<div>
-			<img class="albumg__img" src="media/gastronomia1.png" alt="gastronomia1">
-			<img class="albumg__img" src="media/gastronomia2.png" alt="gastronomia2">
-			<img class="albumg__img" src="media/gastronomia3.png" alt="gastronomia3">
-			<img class="albumg__img" src="media/gastronomia4.png" alt="gastronomia4">
-			<img class="albumg__img" src="media/gastronomia5.png" alt="gastronomia5">
-			<img class="albumg__img" src="media/gastronomia6.png" alt="gastronomia6">
-			<img class="albumg__img" src="media/gastronomia7.png" alt="gastronomia7">
+			<img class="tamano--40" src="media/gastronomia1.png" alt="gastronomia1">
+			<img class="tamano--40" src="media/gastronomia2.png" alt="gastronomia2">
+			<img class="tamano--40" src="media/gastronomia3.png" alt="gastronomia3">
+			<img class="tamano--40" src="media/gastronomia4.png" alt="gastronomia4">
+			<img class="tamano--40" src="media/gastronomia5.png" alt="gastronomia5">
+			<img class="tamano--40" src="media/gastronomia6.png" alt="gastronomia6">
+			<img class="tamano--40" src="media/gastronomia7.png" alt="gastronomia7">
 		</div>
 	</div>
 </body>
