--- a/albumtapamate.html
+++ b/albumtapamate.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"> 
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body>
 <body id="bodyAlbum">
@@ -21,11 +23,17 @@
 		    </ul>
 		</nav>
 	</div>
+	<div>
+		<p class="albumPresentacion">“Práctico, Útil, Ecofriendly e Innovador”
+		Parte de la campaña publicitaria que hicimos para la empresa “Tapamate”, una Pyme que confió en nosotros para publicitar su producto.
+		Aquí, parte del trabajo…
+		</p>
+	</div>
 	<div class="album">
   		<div>
-		    <img src="media/tapamate1.png" alt="tapamate1">
- 	        <img src="media/tapamate2.png" alt="tapamate2">
-		    <img src="media/tapamate3.png" alt="tapamate3">
+		    <img class="tamano--40" src="media/tapamate1.png" alt="tapamate1">
+ 	        <img class="tamano--40" src="media/tapamate2.png" alt="tapamate2">
+		    <img class="tamano--40" src="media/tapamate3.png" alt="tapamate3">
 		 </div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
