agrego contenido y finalizo responsive

--- a/albumgastronomia.html
+++ b/albumgastronomia.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="media/favicon.ico" type="image/favico.png">
 	<title>Album Gastronomia</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
@@ -12,13 +14,13 @@
 <body>
 	<div>
 		<nav>
-		    <ul class="menu type-bold">
+		    <ul class="menuAlbum type-bold">
 		    	<li class="volverAtras"><a href="portfolio.html">Volver atras</a></li>
 		        <li><a href="index.html">Inicio</a></li>
-				<li><a href="communitymanager.html">CM</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="communitymanager.html">CM</a></li>
 		    </ul>
 		</nav>
 	</div>
@@ -28,7 +30,7 @@
 		Estas son solo algunas de las fotos, como para ir abriendo el apetito.. 
 		</p>
 	</div>	
-	<div class="albumg">
+	<div class="album">
 		<div>
 			<img class="tamano--40" src="media/gastronomia1.png" alt="gastronomia1">
 			<img class="tamano--40" src="media/gastronomia2.png" alt="gastronomia2">
@@ -39,5 +41,11 @@
 			<img class="tamano--40" src="media/gastronomia7.png" alt="gastronomia7">
 		</div>
 	</div>
+	<footer class="footerAlbum">
+		<div>
+			<a class="footerLogo" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
+			<p class="footer__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
+		</div>
+	</footer>	
 </body>
 </html>
