--- a/albumpeaky.html
+++ b/albumpeaky.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="media/favicon.ico" type="image/favico.png">
 	<title>Album Peaky Blinder</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
@@ -12,13 +14,13 @@
 <body>
 	<div>
 		<nav>
-		    <ul class="menu type-bold">
+		    <ul class="menuAlbum type-bold">
 		    	<li class="volverAtras"><a href="portfolio.html">Volver atras</a></li>
 		        <li><a  href="index.html">Inicio</a></li>
-				<li><a href="communitymanager.html">CM</a></li>
 				<li><a  href="portfolio.html">Portfolio</a></li>
 				<li><a  href="servicios.html">Servicios</a></li>
 				<li><a  href="contacto.html">Contacto</a></li>
+				<li><a href="communitymanager.html">CM</a></li>
 		    </ul>
 		</nav>
 	</div>
@@ -28,18 +30,26 @@
 		Pasen a disfrutar, por orden de los Peaky Blinders…
 		</p>
 	</div>	
-	</div class="album">
-		<div>
-			<img class="tamano--40" src="media/peaky1.png" alt="peaky1">
-			<img class="tamano--40" src="media/peaky2.png" alt="peaky2">
-			<img class="tamano--40" src="media/peaky3.png" alt="peaky3">
-			<img class="tamano--40" src="media/peaky4.png" alt="peaky4">
-			<img class="tamano--40" src="media/peaky6.png" alt="peaky6">
-			<img class="tamano--40" src="media/peaky7.png" alt="peaky7">
-			<img class="tamano--40" src="media/peaky8.png" alt="peaky8">
-			<img class="tamano--40" src="media/peaky9.png" alt="peaky9">
-			<img class="tamano--40" src="media/peaky5.png" alt="peaky5">
+	</div>
+		<div class="album">
+			<div>
+				<img class="tamano--40" src="media/peaky1.png" alt="peaky1">
+				<img class="tamano--40" src="media/peaky2.png" alt="peaky2">
+				<img class="tamano--40" src="media/peaky3.png" alt="peaky3">
+				<img class="tamano--40" src="media/peaky4.png" alt="peaky4">
+				<img class="tamano--40" src="media/peaky6.png" alt="peaky6">
+				<img class="tamano--40" src="media/peaky7.png" alt="peaky7">
+				<img class="tamano--40" src="media/peaky8.png" alt="peaky8">
+				<img class="tamano--40" src="media/peaky9.png" alt="peaky9">
+				<img class="tamano--40" src="media/peaky5.png" alt="peaky5">
+			</div>
 		</div>
 	</div>
+	<footer class="footerAlbum">
+		<div>
+			<a class="footerLogo" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
+			<p class="footer__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
+		</div>
+	</footer>	
 </body>
 </html>
