--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 	<div id="index">
@@ -29,10 +30,10 @@
 				<img width="150px" src="media/logo2.png" alt="logo2">
 				<ul class="menuPrincipal">
 				    <li><a href="index.html">Inicio</a></li>
-				    <li><a href="communitymanager.html">CM</a></li>
 				    <li><a href="portfolio.html">Portfolio</a></li>
 				    <li><a href="servicios.html">Servicios</a></li>
 				    <li><a href="contacto.html">Contacto</a></li>
+				    <li><a href="communitymanager.html">CM</a></li>
 				</ul>
 			</nav>	
 		</header>
@@ -45,14 +46,26 @@
 					A través de este portfolio, van a poder encontrar parte de mi trabajo y están invitados a contactarse con nosotros mediante el formulario de contacto que van a encontrar en este sitio.
 					Los invito a zambullirse en la pagina es inspeccionar mis álbunes y videos, a escribirnos cualquier duda o inquietud, o simplemente comentarnos que les parece nuestro trabajo.</p>
 				</div>
-				<img src="media/fotoperfil.jpg" alt="perfil1">
+				<img src="media/fotoperfil.png" alt="perfil1">
+			</article>	
+		</section>
+		<section class="artPrincipal">
+			<article>
+				<img src="media/fotoperfil2.png" alt="perfil2">
+				<div>
+					<h2 class="type-extra-bold">Nuestro nuevo servicio de Desarrollo Web</h2>
+					<p>Bienvenidos, soy Agustin Simonit, Desarrollador Web nacido en Casilda, provincia de Santa Fe (Argentina).
+					Luego de 09 años en el mundo del Turismo, como Lic. en Turismo, comence a adentrarme en el interesante mundo de la programacion.
+					Junto con Nico, vamos a ofrecer este nuevo servicio para que no te quedes afuera de las novedades tecnologicas y sus nuevas necesidades.
+					</p>
+				</div>
 			</article>	
 		</section>
 		<footer class="footerPrincipal">
 			<div>
-				<a class="footerPrincipal__red" href="https://www.facebook.com/nico.ferraretto"><i class="fab fa-facebook-square"></i></a>
-				<a class="footerPrincipal__red" href="https://twitter.com/AgusSimonit"><i class="fab fa-twitter-square"></i></a>
-				<a class="footerPrincipal__red" href="https://www.instagram.com/nicoferraretto/"><i class="fab fa-instagram"></i></a>
+				<a class="footerPrincipal__red" href="https://www.facebook.com/nico.ferraretto" target="_blank"><i class="fab fa-facebook-square"></i></a>
+				<a class="footerPrincipal__red" href="https://twitter.com/AgusSimonit" target="_blank"><i class="fab fa-twitter-square"></i></a>
+				<a class="footerPrincipal__red" href="https://www.instagram.com/nicoferraretto/" target="_blank"><i class="fab fa-instagram"></i></a>
 				<a class="footerPrincipal__red--diferent" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
 				<p class="footerPrincipal__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
 			</div>
