--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="media/favicon.ico" type="image/favico.png">
 	<title>Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div>
 		<nav>
 		    <ul class="menu">
 		        <li><a href="index.html">Inicio</a></li>
-				<li><a href="communitymanager.html">CM</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="communitymanager.html">CM</a></li>
 		    </ul>
 		</nav>
 	</div>
@@ -27,6 +30,9 @@
 	    			<div class="textoImg">Album "Aire Libre"</div>
 	  			</div>
 	  		</a>
+	  		<div class="underImg">
+	  			<p>Album "Aire Libre"</p>
+	  		</div>
 	  	</div>
 	  	<div class="imgPortfolio">
 			<a href="albumcoctel.html">
@@ -35,6 +41,9 @@
 	    			<div class="textoImg">Album "Cocteleria"</div>
 	  			</div>
 	  		</a>
+	  		<div class="underImg">
+	  			<p>Album "Cocteleria"</p>
+	  		</div>	  		
 		</div>
 		<div class="imgPortfolio">
 			<a href="albumgastronomia.html">
@@ -43,6 +52,9 @@
 	    			<div class="textoImg">Album "Gastronomia"</div>
 	  			</div>
 	  		</a>
+	  		<div class="underImg">
+	  			<p>Album "Gastronomia"</p>
+	  		</div>	  		
 		</div>
 		<div class="imgPortfolio">
 			<a href="albumpeaky.html">
@@ -51,6 +63,9 @@
 	    			<div class="textoImg">Album "Peaky Blinder"</div>
 	  			</div>
 	  		</a>
+	  		<div class="underImg">
+	  			<p>Album "Peaky Blinder"</p>
+	  		</div>
 		</div>
 		<div class="imgPortfolio">
 			<a href="albumtapamate.html">
@@ -59,6 +74,9 @@
 	    			<div class="textoImg">Album "Tapamate"</div>
 	  			</div>
 	  		</a>
+	  		<div class="underImg">
+	  			<p>Album "Tapamate"</p>
+	  		</div>
 		</div>
 		<div class="imgPortfolio">
 			<a href="albumvineria.html">
@@ -67,13 +85,16 @@
 	    			<div class="textoImg">Album "Vineria"</div>
 	  			</div>
 	  		</a>
+	  		<div class="underImg">
+	  			<p>Album "Vineria"</p>
+	  		</div>
 		</div>
 	</div>
 	<footer class="footer">
 		<div>
-			<a class="footer__red" href="https://www.facebook.com/nico.ferraretto"><i class="fab fa-facebook-square"></i></a>
-			<a class="footer__red" href="https://twitter.com/AgusSimonit"><i class="fab fa-twitter-square"></i></a>
-			<a class="footer__red" href="https://www.instagram.com/nicoferraretto/"><i class="fab fa-instagram"></i></a>
+			<a class="footer__red" href="https://www.facebook.com/nico.ferraretto" target="_blank"><i class="fab fa-facebook-square"></i></a>
+			<a class="footer__red" href="https://twitter.com/AgusSimonit" target="_blank"><i class="fab fa-twitter-square"></i></a>
+			<a class="footer__red" href="https://www.instagram.com/nicoferraretto/" target="_blank"><i class="fab fa-instagram"></i></a>
 			<a class="footer__red--diferent" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
 			<p class="footer__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
 		</div>
