--- a/albumtapamate.html
+++ b/albumtapamate.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="media/favicon.ico" type="image/favico.png">
 	<title>Album Tapamate</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"> 
@@ -13,13 +15,13 @@
 <body id="bodyAlbum">
 	<div>
 		<nav>
-		    <ul class="menu type-bold">
+		    <ul class="menuAlbum type-bold">
 		    	<li class="volverAtras"><a href="portfolio.html">Volver atras</a></li>
 		        <li><a href="index.html">Inicio</a></li>
-				<li><a href="communitymanager.html">CM</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="communitymanager.html">CM</a></li>
 		    </ul>
 		</nav>
 	</div>
@@ -36,6 +38,12 @@
 		    <img class="tamano--40" src="media/tapamate3.png" alt="tapamate3">
 		 </div>
 	</div>
+	<footer class="footerAlbum">
+		<div>
+			<a class="footerLogo" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
+			<p class="footer__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
+		</div>
+	</footer>	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
