--- a/albumvineria.html
+++ b/albumvineria.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="media/favicon.ico" type="image/favico.png">
 	<title>Album Vineria</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
@@ -12,13 +14,13 @@
 <body>
 	<div>
 		<nav>
-		    <ul class="menu type-bold">
+		    <ul class="menuAlbum type-bold">
 		    	<li class="volverAtras"><a href="portfolio.html">Volver atras</a></li>
 		        <li><a href="index.html">Inicio</a></li>
-				<li><a href="communitymanager.html">CM</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="communitymanager.html">CM</a></li>
 		    </ul>
 		</nav>
 	</div>
@@ -26,7 +28,7 @@
 		Parte de la campaña publicitaria que hicimos para “Vinos Langoscos”, otra Pyme que confió en nosotros para publicitar su producto.
 		Aquí, parte del trabajo…
 		</p>
-	<div class="albumv">
+	<div class="album">
 		<div>
 			<img class="tamano--40" src="media/vineria6.png" alt="vineria6">
 			<img class="tamano--40" src="media/vineria7.png" alt="vineria7">
@@ -37,5 +39,11 @@
 			<img class="tamano--40" src="media/vineria1.png" alt="vineria1">
 		</div>
 	</div>
+	<footer class="footerAlbum">
+		<div>
+			<a class="footerLogo" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
+			<p class="footer__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
+		</div>
+	</footer>	
 </body>
 </html>
