--- a/contacto.html
+++ b/contacto.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="media/favicon.ico" type="image/favico.png">
 	<title>Contacto</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
-<body>
-	<div id="pagContacto">
-		<div class="navContacto">
-			<nav>
-			    <ul class="menu">
-			        <li><a href="index.html">Inicio</a></li>
-					<li><a href="communitymanager.html">CM</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="servicios.html">Servicios</a></li>
-					<li><a href="contacto.html">Contacto</a></li>
-			    </ul>
-			</nav>
-		</div>
+<body class="bodyContacto">
+	<div class="navContacto">
+		<nav>
+			<ul class="menu">
+			    <li><a href="index.html">Inicio</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="servicios.html">Servicios</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="communitymanager.html">CM</a></li>
+			</ul>
+		</nav>
+	</div>
+	<div class="pagContacto">
 		<div class="contactos1">
 			<h3>Formulario de Contacto</h3>
 				<p>Cada mensaje se lee y se responde en 48 horas hábiles, de lunes a viernes. 
@@ -38,29 +40,29 @@
 			   		<input type="radio" id="radioCompania" name="account" />
 			   		<label for="radioCompania" class="radio">Compania</label>
 		    	</div>
-				<input type="given-name" name="nombre" placeholder="Ingrese su Nombre" required/><br>
-				<input type="tel" name="telefono" placeholder="Ingrese su Telefono"><br>
-				<input type="email" name="email" placeholder="Ingrese su Email" required/><br>
+				<input type="given-name" name="nombre" placeholder="Ingrese su Nombre" required/>
+				<input type="tel" name="telefono" placeholder="Ingrese su Telefono">
+				<input type="email" name="email" placeholder="Ingrese su Email" required/>
 					<select name="estadocivil">
 						<option value="soltero">Soltero</option>
 						<option value="casado">Casado</option>
 						<option value="divorciado">Divorciado</option>
 					</select><br>
-				<textarea name="texto" placeholder="Comentarios" required/></textarea><br>
+				<textarea name="texto" placeholder="Comentarios" required/></textarea>
 				<label for="newsletter">¿Desea recibir Newsletter?</label>
-				<input type="checkbox" name="Newsletter" id="newsletter" checked="checked"><br>
+				<input type="checkbox" name="Newsletter" id="newsletter" checked="checked">
 				<input type="submit" name="enviar" value="Enviar Formulario"><i class="far fa-paper-plane"></i>
 			</form>
 		</div>
-		<footer class="footer">
-			<div>
-				<a class="footer__red" href="https://www.facebook.com/nico.ferraretto"><i class="fab fa-facebook-square"></i></a>
-				<a class="footer__red" href="https://twitter.com/AgusSimonit"><i class="fab fa-twitter-square"></i></a>
-				<a class="footer__red" href="https://www.instagram.com/nicoferraretto/"><i class="fab fa-instagram"></i></a>
+	</div>
+	<footer class="footer">
+		<div>
+				<a class="footer__red" href="https://www.facebook.com/nico.ferraretto" target="_blank"><i class="fab fa-facebook-square"></i></a>
+				<a class="footer__red" href="https://twitter.com/AgusSimonit" target="_blank"><i class="fab fa-twitter-square"></i></a>
+				<a class="footer__red" href="https://www.instagram.com/nicoferraretto/" target="_blank"><i class="fab fa-instagram"></i></a>
 				<a class="footer__red--diferent" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
 				<p class="footer__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
-			</div>
-		</footer>
-	</div>
+		</div>
+	</footer>
 </body>
 </html>
