--- a/servicios.html
+++ b/servicios.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="media/favicon.ico" type="image/favico.png">
 	<title>Servicios</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<script src="https://kit.fontawesome.com/753d1325e9.js" crossorigin="anonymous"></script>
@@ -12,10 +14,10 @@
 		<nav class="nav">
 		    <ul class="menu">
 		        <li><a href="index.html">Inicio</a></li>
-				<li><a href="communitymanager.html">CM</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="communitymanager.html">CM</a></li>
 		    </ul>
 		</nav>
 		<div class="serv">
@@ -61,9 +63,9 @@
 		</div>
 		<footer class="footer">
 			<div>
-				<a class="footer__red" href="https://www.facebook.com/nico.ferraretto"><i class="fab fa-facebook-square"></i></a>
-				<a class="footer__red" href="https://twitter.com/AgusSimonit"><i class="fab fa-twitter-square"></i></a>
-				<a class="footer__red" href="https://www.instagram.com/nicoferraretto/"><i class="fab fa-instagram"></i></a>
+				<a class="footer__red" href="https://www.facebook.com/nico.ferraretto" target="_blank"><i class="fab fa-facebook-square"></i></a>
+				<a class="footer__red" href="https://twitter.com/AgusSimonit" target="_blank"><i class="fab fa-twitter-square"></i></a>
+				<a class="footer__red" href="https://www.instagram.com/nicoferraretto/" target="_blank"><i class="fab fa-instagram"></i></a>
 				<a class="footer__red--diferent" href="index.html"><img width="60px" src="media/logo2.png" alt="logo2"></a>
 				<p class="footer__copyright type-bold">Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en cualquier modo explotar cualquier parte de este servicio sin la autorización previa por escrito</p>
 			</div>
