retoques pre entrega final

--- a/communitymanager.html
+++ b/communitymanager.html
@@ -21,7 +21,7 @@
 		    </ul>
 		</nav>
 	</div>
-	<div class="fondoCm">
+	<div class="marginCm">
 		<div class="tituloCm">
 			<h2>¿Por que contratar nuestros servicios de COMMUTY MANAGER?</h2>
 		</div>	
